Fixes title alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 :root {
-    --header-padding: 0.5em 1em;
+    --header-padding: 0.5rem 1rem;
     --header-background-color: #2C2F34;
     --content-background-color: #363739;
     --text-color: #D3D3D3;
